[r=ricgard,andreserl][bug=][author=ricgard] Adds new layout and spacing to the commissioning dropdown.

--- a/src/maasserver/static/scss/maas/components/_placeholders.scss
+++ b/src/maasserver/static/scss/maas/components/_placeholders.scss
@@ -252,6 +252,21 @@
     margin-bottom: 0;
 }
 
+.width {
+
+  &--auto {
+    width: auto;
+  }
+
+  &--half {
+    width: 50%;
+  }
+
+  &--full {
+    width: 100%;
+  }
+}
+
 .tooltip {
   position: relative;
 
